--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   latlng: ^2.0.7
+  sim_card_info: ^1.0.2
   
 
 dev_dependencies:
