--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   permission_handler: ^11.3.1
   latlng: ^2.0.7
   sim_card_info: ^1.0.2
+  firebase_messaging: ^15.2.1
+  flutter_local_notifications: ^18.0.1
+  android_alarm_manager_plus: ^4.0.6
+  fluttertoast: ^8.2.11
   
 
 dev_dependencies:
