--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   android_alarm_manager_plus: ^4.0.6
   fluttertoast: ^8.2.11
+  image_picker: ^1.1.2
   
 
 dev_dependencies:
