--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   android_alarm_manager_plus: ^4.0.6
   fluttertoast: ^8.2.11
   image_picker: ^1.1.2
+  firebase_storage: ^12.4.2
   
 
 dev_dependencies:
