add date and time

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   fluttertoast: ^8.2.11
   image_picker: ^1.1.2
   firebase_storage: ^12.4.2
+  intl: ^0.20.2
   
 
 dev_dependencies:
