--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,13 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  assets:
+    - assets/img.png
+    - assets/img2.jpg
+    - assets/img_2.png
+    - assets/img_3.png
+    - assets/img_4.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
